# UltraPrecise

./: .build.config.cmake  .cproject  .dockerignore  .project  AriesCodeStyle.xml  CMakeLists.txt  Doxyfile  README.md  genversion.sh  get_execute_time_from_recent_log.py  make_deb.sh  partition_test_.sh  source.sh
append_expr_info/: readme.md
append_expr_info/gen_data/: tbl2csv.py
docker/: base.dockerfile  dev.dockerfile  dev_docker_build.sh  dev_docker_start.sh  rateup.dockerfile  rateup_docker_build.sh  rateup_docker_start.sh  release.dockerfile  release_docker_build.sh
smoke_test_queries/: 23.sql  24.sql  25.sql  26.sql  27.sql  28.sql  29.sql  30.sql  31.sql  32.sql  33.sql  34.sql  35.sql  36.sql  37.sql  38.sql  39.sql  40.sql  41.sql  42.sql  43.sql  44.sql  45.sql  46.sql  47.sql  48.sql  49.sql  50.sql  51.sql  52.sql  53.sql  54.sql  55.sql  56.sql  57.sql  58.sql  59.sql  60.sql  61.sql  62.sql  (+38 more)
src/: AriesAssert.cc  AriesAssert.h  AriesColumnDataIterator.cu  AriesColumnDataIterator.hxx  AriesColumnType.cu  AriesColumnType.h  AriesDataType.cu  AriesDataType.h  AriesDefinition.h  AriesDeltaTableProperty.h  AriesDeviceProperty.cpp  AriesDeviceProperty.h  AriesException.cpp  AriesException.h  AriesSimpleItemContainer.h  CpuTimer.h  version.h
src/AriesEngine/: AriesCalcTreeGenerator.cpp  AriesCalcTreeGenerator.h  AriesColumnNode.cpp  AriesColumnNode.h  AriesCommonExpr.cpp  AriesCommonExpr.h  AriesConstantNode.cpp  AriesConstantNode.h  AriesDataCache.cpp  AriesDataCache.h  AriesDataDef.cpp  AriesDataDef.h  AriesDataSource.h  AriesDeleteNode.cpp  AriesDeleteNode.h  AriesExchangeNode.cpp  AriesExchangeNode.h  AriesExprCalcNode.cpp  AriesExprCalcNode.h  AriesExprJoinNode.cpp  AriesExprJoinNode.h  AriesFilterNode.cpp  AriesFilterNode.h  AriesGroupNode.cpp  AriesGroupNode.h  AriesInsertNode.cpp  AriesInsertNode.h  AriesJoinNode.cpp  AriesJoinNode.h  AriesJoinNodeHelper.cpp  AriesJoinNodeHelper.h  AriesJoinTreeGenerator.cpp  AriesJoinTreeGenerator.h  AriesLimitNode.cpp  AriesLimitNode.h  AriesMvccScanNode.cpp  AriesMvccScanNode.h  AriesNodeManager.cpp  AriesNodeManager.h  AriesOpNode.cpp  (+23 more)
src/AriesEngineWrapper/: AbstractMemTable.h  AriesEngineShell.cpp  AriesEngineShell.h  AriesExprBridge.cpp  AriesExprBridge.h  AriesMemTable.cpp  AriesMemTable.h  ExpressionSimplifier.cpp  ExpressionSimplifier.h
src/CudaAcc/: AriesDecimalAlgorithm.cu  AriesDecimalAlgorithm.h  AriesEngineAlgorithm.cu  AriesEngineAlgorithm.h  AriesEngineDef.cu  AriesEngineDef.h  AriesEngineException.cpp  AriesEngineException.h  AriesEngineUtil.cu  AriesEngineUtil.h  AriesSqlOperator.h  AriesSqlOperator_columnCompare.cu  AriesSqlOperator_columnCompare.h  AriesSqlOperator_common.cu  AriesSqlOperator_common.h  AriesSqlOperator_compareSingleColumn.cu  AriesSqlOperator_compareSingleColumn.h  AriesSqlOperator_compareSingleColumnIter.cu  AriesSqlOperator_compareSingleColumnIter.h  AriesSqlOperator_filter.cu  AriesSqlOperator_filter.h  AriesSqlOperator_group.cu  AriesSqlOperator_group.h  AriesSqlOperator_hashjoin.cu  AriesSqlOperator_hashjoin.h  AriesSqlOperator_helper.h  AriesSqlOperator_helpers.cu  AriesSqlOperator_materialize.cu  AriesSqlOperator_materialize.h  AriesSqlOperator_sort.cu  AriesSqlOperator_sort.h  AriesSqlOperator_sortjoin.cu  AriesSqlOperator_sortjoin.h  AriesSqlOperator_sqlfunc.cu  AriesSqlOperator_sqlfunc.h  DynamicKernel.cu  DynamicKernel.h  compare_function.cu  compare_function.h  compare_two_column.h  (+7 more)
src/datatypes/: AriesCastFunctions.cu  AriesCastFunctions.hxx  AriesDataTypeUtil.cu  AriesDataTypeUtil.hxx  AriesDate.cu  AriesDate.hxx  AriesDateFormat.cu  AriesDateFormat.hxx  AriesDateTimeLocales.cu  AriesDateTimeLocales.h  AriesDatetime.cu  AriesDatetime.hxx  AriesDatetimeTrans.cpp  AriesDatetimeTrans.h  AriesDecimal.hxx  AriesInnerHelper.cu  AriesInnerHelper.hxx  AriesIntervalTime.cu  AriesIntervalTime.hxx  AriesMysqlInnerTime.cpp  AriesMysqlInnerTime.h  AriesSqlFunctions.cu  AriesSqlFunctions.hxx  AriesTime.cu  AriesTime.hxx  AriesTimeCalc.cu  AriesTimeCalc.hxx  AriesTimestamp.cu  AriesTimestamp.hxx  AriesTimestampShow.cpp  AriesTimestampShow.h  AriesTruncateFunctions.cu  AriesTruncateFunctions.hxx  AriesYear.cu  AriesYear.hxx  aries_types.hxx  decimal.cu  decimal.hxx  functions.cu  functions.hxx  (+3 more)
src/frontend/: AbstractBiaodashi.h  AbstractCommand.h  AbstractDatabaseStorage.h  AbstractQuery.h  AbstractQueryEngine.h  Account.h  AccountMgmtStructure.h  AdminStmtStructure.h  AriesEngineByMaterialization.cpp  AriesEngineByMaterialization.h  AriesFrontendException.cpp.bak  AriesFrontendException.h.bak  AriesSQLStatement.cpp  AriesSQLStatement.h  AriesServerSession.h  BasicRel.cpp  BasicRel.h  BiaodashiAuxProcessor.cpp  BiaodashiAuxProcessor.h  ColumnDescription.h  ColumnShell.cpp  ColumnShell.h  ColumnStructure.cpp  ColumnStructure.h  CommandExecutor.cpp  CommandExecutor.h  CommandStructure.cpp  CommandStructure.h  CommonBiaodashi.cpp  CommonBiaodashi.h  DatabaseSchema.cpp  DatabaseSchema.h  DeleteStructure.cpp  DeleteStructure.h  ExecutorPortal.cpp  ExecutorPortal.h  ExprContext.cpp  ExprContext.h  FromPartStructure.cpp  FromPartStructure.h  (+79 more)
src/optimizer/: ExchangeBuilder.cpp  ExchangeBuilder.h  GroupByColumnsSimplify.cpp  GroupByColumnsSimplify.h  HavingToFilter.cpp  HavingToFilter.h  JoinReorganization.cpp  JoinReorganization.h  JoinSubqueryRemoving.cpp  JoinSubqueryRemoving.h  PartitionConditionOptimizer.cpp  PartitionConditionOptimizer.h  PredicatePushToSubquery.cpp  PredicatePushToSubquery.h  PredicatePushdown.cpp  PredicatePushdown.h  QueryOptimizationPolicy.h  QueryOptimizer.cpp  QueryOptimizer.h  QueryTreeFormation.cpp  QueryTreeFormation.h  SelfJoin.cpp  SelfJoin.h  SetPrimaryForeignJoin.cpp  SetPrimaryForeignJoin.h  SpoolBuilder.cpp  (+9 more)
stl/: cap.stl  gear.stl  myball.stl  ring.stl
test/: TestBugFix.cpp  TestCommonBase.cpp  TestCommonBase.h  TestPie.cpp  TestTPCHIsolation.cpp  TestTpcds10.cpp  TestTpch218_1.cpp  TestTpch218_100.cpp  TestTpchWithNull.cpp  TestTpchWithWch.cpp  TestTpch_1.cpp  TestTpch_100.cpp  TestTpch_20.cpp  TestTransaction.cpp  TestUtils.cpp  TestUtils.h
(+608 files in other folders)
